; ModuleID = '/home/carl/AnghaBench/RetroArch/libretro-common/formats/xml/extr_rxml.c_rxml_load_document.c'
source_filename = "/home/carl/AnghaBench/RetroArch/libretro-common/formats/xml/extr_rxml.c_rxml_load_document.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@RETRO_VFS_FILE_ACCESS_READ = common dso_local global i32 0, align 4
@RETRO_VFS_FILE_ACCESS_HINT_NONE = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32* @rxml_load_document(i8* %0) #0 {
  %2 = alloca i32*, align 8
  %3 = alloca i8*, align 8
  %4 = alloca i32*, align 8
  %5 = alloca i8*, align 8
  %6 = alloca i64, align 8
  %7 = alloca i32*, align 8
  store i8* %0, i8** %3, align 8
  store i8* null, i8** %5, align 8
  store i64 0, i64* %6, align 8
  %8 = load i8*, i8** %3, align 8
  %9 = load i32, i32* @RETRO_VFS_FILE_ACCESS_READ, align 4
  %10 = load i32, i32* @RETRO_VFS_FILE_ACCESS_HINT_NONE, align 4
  %11 = call i32* @filestream_open(i8* %8, i32 %9, i32 %10)
  store i32* %11, i32** %7, align 8
  %12 = load i32*, i32** %7, align 8
  %13 = icmp ne i32* %12, null
  br i1 %13, label %15, label %14

14:                                               ; preds = %1
  store i32* null, i32** %2, align 8
  br label %53

15:                                               ; preds = %1
  %16 = load i32*, i32** %7, align 8
  %17 = call i64 @filestream_get_size(i32* %16)
  store i64 %17, i64* %6, align 8
  %18 = load i64, i64* %6, align 8
  %19 = add nsw i64 %18, 1
  %20 = call i64 @malloc(i64 %19)
  %21 = inttoptr i64 %20 to i8*
  store i8* %21, i8** %5, align 8
  %22 = load i8*, i8** %5, align 8
  %23 = icmp ne i8* %22, null
  br i1 %23, label %25, label %24

24:                                               ; preds = %15
  br label %44

25:                                               ; preds = %15
  %26 = load i8*, i8** %5, align 8
  %27 = load i64, i64* %6, align 8
  %28 = getelementptr inbounds i8, i8* %26, i64 %27
  store i8 0, i8* %28, align 1
  %29 = load i32*, i32** %7, align 8
  %30 = load i8*, i8** %5, align 8
  %31 = load i64, i64* %6, align 8
  %32 = call i64 @filestream_read(i32* %29, i8* %30, i64 %31)
  %33 = load i64, i64* %6, align 8
  %34 = icmp ne i64 %32, %33
  br i1 %34, label %35, label %36

35:                                               ; preds = %25
  br label %44

36:                                               ; preds = %25
  %37 = load i32*, i32** %7, align 8
  %38 = call i32 @filestream_close(i32* %37)
  store i32* null, i32** %7, align 8
  %39 = load i8*, i8** %5, align 8
  %40 = call i32* @rxml_load_document_string(i8* %39)
  store i32* %40, i32** %4, align 8
  %41 = load i8*, i8** %5, align 8
  %42 = call i32 @free(i8* %41)
  %43 = load i32*, i32** %4, align 8
  store i32* %43, i32** %2, align 8
  br label %53

44:                                               ; preds = %35, %24
  %45 = load i8*, i8** %5, align 8
  %46 = call i32 @free(i8* %45)
  %47 = load i32*, i32** %7, align 8
  %48 = icmp ne i32* %47, null
  br i1 %48, label %49, label %52

49:                                               ; preds = %44
  %50 = load i32*, i32** %7, align 8
  %51 = call i32 @filestream_close(i32* %50)
  br label %52

52:                                               ; preds = %49, %44
  store i32* null, i32** %2, align 8
  br label %53

53:                                               ; preds = %52, %36, %14
  %54 = load i32*, i32** %2, align 8
  ret i32* %54
}

declare dso_local i32* @filestream_open(i8*, i32, i32) #1

declare dso_local i64 @filestream_get_size(i32*) #1

declare dso_local i64 @malloc(i64) #1

declare dso_local i64 @filestream_read(i32*, i8*, i64) #1

declare dso_local i32 @filestream_close(i32*) #1

declare dso_local i32* @rxml_load_document_string(i8*) #1

declare dso_local i32 @free(i8*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
